# mkgp

./: .gitignore  .gitlab-ci.yml  GPR1D.py  README.md  README.rst  __init__.py  build_and_distribute.sh  meta.yaml  pyproject.toml  setup.py
docs/source/: conf.py  gpr1d.core.rst  gpr1d.gui.rst  gpr1d.scripts.rst  index.rst  modules.rst
docs/src/: conf.py  index.rst  mkgp.core.rst  mkgp.gui.rst  mkgp.scripts.rst  modules.rst
guis/: GPR1D_GUI.py  GPR1D_GUI.readme
recipe/: build_and_distribute.sh  meta.yaml
scripts/: GPR1D_demo.py  gp_demo.py
src/gpr1d/: GPR1D.py  GPR1D_GUI.py  GPR1D_demo.py  GPR1D_profiler.py
src/gpr1d/core/: baseclasses.py  definitions.py  kernels.py  routines.py  simple.py  utils.py
src/gpr1d/gui/: gui.py
src/gpr1d/scripts/: demo.py  profiler.py
src/mkgp/core/: kernels.py  routines.py  simple.py  utils.py
src/mkgp/gui/: gui.py  gui.readme
src/mkgp/scripts/: demo.py  demo_1d.py  profiler.py
tests/: conftest.py  test_gpr.py  test_kernels.py
