[build-system]
requires = ["setuptools>=62.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mkgp"
description = "Classes for Gaussian Process Regression fitting of ND data with errorbars"
readme = "README.rst"
requires-python = ">=3.7,<3.14"
license = {file = "LICENSE"}
keywords = ["gaussian process regression", "data fitting", "regression analysis", "kriging", "noisy input", "heteroscedastic error"]
authors = [
  {name = "Aaron Ho", email = "aaronkho@mit.edu" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Utilities",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

dependencies = [
  "pip",
  "numpy>=1.13",
  "scipy>=0.17",
  "pandas",
  "tables",
  "ipython",
]

[project.optional-dependencies]
dev = ["coverage", "pytest", "pytest-cov"]
docs = ["sphinx", "furo", "sphinx-rtd-theme"]
build = ["build", "twine"]
demo = ["matplotlib"]
gui = ["pyqt5", "matplotlib"]
profile = ["scikit-learn"]

[project.urls]
"Homepage" = "https://gitlab.com/aaronkho/mkgp"
"Bug Reports" = "https://gitlab.com/aaronkho/mkgp/-/issues"
"Source" = "https://gitlab.com/aaronkho/mkgp"

[project.scripts]
mkgp_1d_demo = "mkgp.scripts.demo_1d:main"
mkgp_profiler = "mkgp.scripts.profiler:main"
mkgp_gui = "mkgp.gui.gui:main"

[tool.setuptools.dynamic]
version = {attr = "mkgp.__version__"}

[tool.pytest.ini_options]
markers = [
    "base_classes",
    "helpers",
    "kernels",
    "operator_kernels",
    "empty_object",
    "evaluation",
    "simple_version",
    "optimization",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"

[tool.pixi.pypi-dependencies]
mkgp = { path = ".", editable = true }

[tool.pixi.environments]
default = {features = ["gui", "demo"], solve-group = "default"}
develop = {features = ["dev", "docs", "build", "gui", "demo", "profile"], solve-group = "develop"}

